[package]
name = "notion-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
request = []
convert_from_notion = []

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.0"
chrono = "0.4.23"
futures-core = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
